--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -119,15 +119,15 @@
                 <div class="col-md-12 text-center">
                     <div class="about-info">
                         <div class="row h-100 align-items-center justify-content-md-center">
-                            <div class="col-12 py-5 col-xxl-3 py-xxl-0">
+                            <div class="about-info-item col-12 col-xxl-3">
                                 <h2>8</h2>
                                 <span>лет опыта</span>
                             </div>
-                            <div class="col-12 py-5 col-xxl-3 py-xxl-0">
+                            <div class="about-info-item col-12 col-xxl-3">
                                 <h2>1500+</h2>
                                 <span>довольных клиентов</span>
                             </div>
-                            <div class="col-12 py-5 col-xxl-3 py-xxl-0">
+                            <div class="about-info-item col-12 col-xxl-3">
                                 <h2>1.3M$</h2>
                                 <span>заработали наши клиенти за 2024 год</span>
                             </div>
@@ -147,9 +147,7 @@
                     <div>
                         <h2>Наша Миссия - <span>ВАШ РЕЗУЛЬТАТ</span></h2>
                         <p>Сделать торговлю честной, умной и доступной.</p>
-                        <div class="d-grid gap-2 d-md-block">
-                            <button type="button" class="btn btn-success">Открыть Счет</button>
-                        </div>
+                        <button type="button" class="btn btn-success">Открыть Счет</button>
                     </div>
                 </div>
                 <div class="col-12 col-xxl-6 pt-md-5 mw-100">
