--- a/crypto_project/customer/templates/_transaction.html
+++ b/crypto_project/customer/templates/_transaction.html
@@ -9,172 +9,62 @@
     </ul>
     <div class="d-none d-md-block tab-content" id="pills-tabContent">
       <div class="tab-pane fade show active" id="pills-open" role="tabpanel" aria-labelledby="pills-open-tab" tabindex="0">
-          <div class="open_preloader preloader-loading-wrapper">
-              <div class="cssload-loading"><i></i><i></i></div>
-            </div>
-{#          <table class="table">#}
-{#              <thead>#}
-{#                <tr>#}
-{#                  <th>Актив</th>#}
-{#                  <th>Сумма</th>#}
-{#                  <th>Время открытия</th>#}
-{#                  <th>Время закрытия</th>#}
-{#                  <th>Осталось</th>#}
-{#                  <th>Профит</th>#}
-{#                </tr>#}
-{#              </thead>#}
-{#              {% if opened_bets|length  %}#}
-{#                <tbody>#}
-{#                {% for bet in opened_bets %}#}
-{#                <tr>#}
-{#                  <td>{{ bet.quotation }}</td>#}
-{#                  <td>{{ bet.summa }}</td>#}
-{#                  <td>{{ bet.open_date|date:"d.m.Y, H:i:s" }}</td>#}
-{#                  <td>{{ bet.close_date|date:"d.m.Y, H:i:s" }}</td>#}
-{#                  <td>---</td>#}
-{#                  <td>{{ bet.profit }}</td>#}
-{#                </tr>#}
-{#                {% endfor %}#}
-{#                </tbody>#}
-{#            {% endif %}#}
-{#            </table>#}
-{#            {% if not opened_bets|length %}#}
-{#            <div class="empty">#}
-{#              <i class="icon icon-no-orders"></i>#}
-{#              <p>Нет открытых сделок</p>#}
-{#            </div>#}
-{#            {% endif %}#}
-          <div class="empty open_empty">
-              <i class="icon icon-no-orders"></i>
-              <p>Нет открытых сделок</p>
-          </div>
+        <div class="open_preloader preloader-loading-wrapper">
+            <div class="cssload-loading"><i></i><i></i></div>
+        </div>
+        <div id="render_open"></div>
+        <div class="empty open_empty">
+            <i class="icon icon-no-orders"></i>
+            <p>Нет открытых сделок</p>
+        </div>
       </div>
       <div class="tab-pane fade" id="pills-close" role="tabpanel" aria-labelledby="pills-close-tab" tabindex="0">
-          <table class="table">
-              <thead>
-                <tr>
-                  <th>Актив</th>
-                  <th>Сумма</th>
-                  <th>Время открытия</th>
-                  <th>Время закрытия</th>
-                  <th>Профит</th>
-                </tr>
-              </thead>
-              {% if closed_bets|length  %}
-                <tbody>
-                {% for bet in closed_bets %}
-                <tr>
-                  <td>{{ bet.quotation }}</td>
-                  <td>{{ bet.summa }}</td>
-                  <td>{{ bet.open_date|date:"d.m.Y, H:i:s" }}</td>
-                  <td>{{ bet.close_date|date:"d.m.Y, H:i:s" }}</td>
-                  <td>{{ bet.profit }}</td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            {% endif %}
-            </table>
-            {% if not closed_bets|length %}
-            <div class="empty">
+          <div class="close_preloader preloader-loading-wrapper">
+            <div class="cssload-loading"><i></i><i></i></div>
+          </div>
+          <div id="render_close"></div>
+          <div class="empty close_empty">
               <i class="icon icon-no-orders"></i>
               <p>Нет закрытых сделок</p>
             </div>
-            {% endif %}
         </div>
     </div>
 
-    <ul class="d-flex d-md-none nav nav-pills" id="pills-mob-tab" role="tablist">
-      <li class="nav-item" role="presentation">
+    <ul class="row d-flex d-md-none nav nav-pills" id="pills-mob-tab" role="tablist">
+      <li class="col-6 nav-item" role="presentation">
         <button class="nav-link tab-link active" id="pills-mob-open-tab" data-bs-toggle="pill" data-bs-target="#pills-mob-open" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Открытые сделки</button>
       </li>
-      <li class="nav-item" role="presentation">
+      <li class="col-6 nav-item" role="presentation">
         <button class="nav-link tab-link" id="pills-mob-close-tab" data-bs-toggle="pill" data-bs-target="#pills-mob-close" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Закрытые сделки</button>
       </li>
     </ul>
+
     <div class="d-block d-md-none tab-content" id="pills-mob-tabContent">
       <div class="tab-pane fade show active" id="pills-mob-open" role="tabpanel" aria-labelledby="pills-mob-open-tab" tabindex="0">
           <div class="row">
               <div class="col m-4">
-                  {% if opened_bets|length  %}
-                      {% for bet in opened_bets %}
-                        <table class="profile-table mob-bet table align-middle">
-                          <tbody>
-                            <tr>
-                              <td class="text-start no-border">Актив</td>
-                              <td class="text-end no-border">{{ bet.quotation }}</td>
-                            </tr>
-                            <tr>
-                              <td class="text-start no-border">Сума</td>
-                              <td class="text-end no-border">{{ bet.summa }}</td>
-                            </tr>
-                            <tr>
-                              <td class="text-start no-border">Время открытия</td>
-                              <td class="text-end no-border">{{ bet.open_date|date:"d.m.Y, H:i:s" }}</td>
-                            </tr>
-                            <tr>
-                              <td class="text-start no-border">Время закрытия</td>
-                              <td class="text-end no-border">{{ bet.close_date|date:"d.m.Y, H:i:s" }}</td>
-                            </tr>
-                            <tr>
-                              <td class="text-start no-border">Зачислено</td>
-                              <td class="text-end no-border">---</td>
-                            </tr>
-                            <tr>
-                              <td class="pb-3 text-start no-border">Профит</td>
-                              <td class="pb-3 text-end no-border">{{ bet.profit }}</td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      {% endfor %}
-                  {% else%}
-                    <div class="empty">
-                      <i class="icon icon-no-orders"></i>
-                      <p>Нет открытых сделок</p>
+                    <div class="open_preloader_mob preloader-loading-wrapper">
+                        <div class="cssload-loading"><i></i><i></i></div>
                     </div>
-                  {% endif %}
+                    <div id="render_open_mob"></div>
+                    <div class="empty open_empty_mob">
+                        <i class="icon icon-no-orders"></i>
+                        <p>Нет открытых сделок</p>
+                    </div>
               </div>
           </div>
       </div>
       <div class="tab-pane fade" id="pills-mob-close" role="tabpanel" aria-labelledby="pills-mob-close-tab" tabindex="0">
           <div class="row">
               <div class="col m-4">
-                  {% if closed_bets|length  %}
-                      {% for bet in closed_bets %}
-                        <table class="profile-table mob-bet table align-middle">
-                          <tbody>
-                            <tr>
-                              <td class="text-start no-border">Актив</td>
-                              <td class="text-end no-border">{{ bet.quotation }}</td>
-                            </tr>
-                            <tr>
-                              <td class="text-start no-border">Сума</td>
-                              <td class="text-end no-border">{{ bet.summa }}</td>
-                            </tr>
-                            <tr>
-                              <td class="text-start no-border">Время открытия</td>
-                              <td class="text-end no-border">{{ bet.open_date|date:"d.m.Y, H:i:s" }}</td>
-                            </tr>
-                            <tr>
-                              <td class="text-start no-border">Время закрытия</td>
-                              <td class="text-end no-border">{{ bet.close_date|date:"d.m.Y, H:i:s" }}</td>
-                            </tr>
-                            <tr>
-                              <td class="text-start no-border">Зачислено</td>
-                              <td class="text-end no-border">---</td>
-                            </tr>
-                            <tr>
-                              <td class="pb-3 text-start no-border">Профит</td>
-                              <td class="pb-3 text-end no-border">{{ bet.profit }}</td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      {% endfor %}
-                  {% else%}
-                    <div class="empty">
-                      <i class="icon icon-no-orders"></i>
-                      <p>Нет закрытых сделок</p>
+                    <div class="close_preloader_mob preloader-loading-wrapper">
+                        <div class="cssload-loading"><i></i><i></i></div>
                     </div>
-                  {% endif %}
+                    <div id="render_close_mob"></div>
+                    <div class="empty close_empty_mob">
+                        <i class="icon icon-no-orders"></i>
+                        <p>Нет открытых сделок</p>
+                    </div>
               </div>
           </div>
         </div>
