--- a/crypto_project/customer/templates/_transaction.html
+++ b/crypto_project/customer/templates/_transaction.html
@@ -63,7 +63,7 @@
                     <div id="render_close_mob"></div>
                     <div class="empty close_empty_mob">
                         <i class="icon icon-no-orders"></i>
-                        <p>Нет открытых сделок</p>
+                        <p>Нет закрытых сделок</p>
                     </div>
               </div>
           </div>
