--- a/crypto_project/customer/templates/_platform.html
+++ b/crypto_project/customer/templates/_platform.html
@@ -92,7 +92,7 @@
         <div class="empty-balance text-center py-2">
             <p class="d-block d-xl-none">Недостаточно средтсв, необходимо пополнить счет!</p>
             <span class="d-none d-xl-inline">Недостаточно средтсв, необходимо пополнить счет!</span>
-            <button type="button" class="btn btn-success ms-0 mt-3 mt-xl-0 ms-xl-4">Пополнение</button>
+            <button type="button" class="openReplenishmentModal btn btn-success ms-0 mt-3 mt-xl-0 ms-xl-4">Пополнение</button>
         </div>
     {% endif %}
 </div>
