--- a/static/site/css/style.css
+++ b/static/site/css/style.css
@@ -471,6 +471,61 @@ img {
     text-align: center;
     margin: 0;
 }
+.mmodal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+  transition: display 0.5s ease-in;
+  align-items: center;
+}
+
+.modal-header {
+    padding: 0 !important;
+    border: none !important;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 0 auto;
+  padding: 16px 32px 32px 32px;
+  width: 586px;
+  border-radius: var(--block-radius);
+  position: relative;
+}
+
+.modal-content .close {
+    font-size: 20px;
+    position: absolute;
+    right: 16px;
+    top: 16px;
+}
+
+.modal-content .title {
+    text-align: center;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: bold;
+    margin: 1rem 0;
+}
+
+.modal-content button {
+    width: 100%;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /* ================= media ================*/
 @media (min-width: 1440px) {
     .container, .container-lg, .container-md, .container-sm, .container-xl {
@@ -512,7 +567,7 @@ img {
         padding: 0;
         font-size: 16px;
         color: #fff;
-    } 
+    }
 
     .navbar-nav {
         padding: 15px;
@@ -573,7 +628,7 @@ img {
     .fun-facts-img {
         margin-bottom: 30px;
     }
-    
+
     .contact-form {
         margin-top: 20px;
     }
@@ -594,12 +649,18 @@ img {
     .mission-item:nth-child(3) {
         border-bottom: 1px solid var(--color-border);
     }
+
+    .modal-content .title {
+        font-size: 20px;
+        line-height: 24px;
+    }
 }
 
 @media (max-width: 575px) {
     .modal-content {
         width: 93% !important;
         margin: 0 auto !important;
+        padding: 16px 16px 24px 16px !important;
     }
 
     .home-text h1{
@@ -678,59 +739,4 @@ img {
         font-size: 24px;
         line-height: 32px;
     }
-}
-
-.mmodal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 10; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
-  transition: display 0.5s ease-in;
-  align-items: center;
-}
-
-.modal-header {
-    padding: 0 !important;
-    border: none !important;
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 0 auto;
-  padding: 16px 32px 32px 32px;
-  width: 450px;
-  border-radius: var(--block-radius);
-  position: relative;
-}
-
-.modal-content .close {
-    font-size: 20px;
-    position: absolute;
-    right: 16px;
-    top: 16px;
-}
-
-.modal-content .title {
-    text-align: center;
-    font-size: 24px;
-    line-height: 32px;
-    font-weight: bold;
-    margin: 1rem 0;
-}
-
-.modal-content button {
-    width: 100%;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
