--- a/templates/base_profile.html
+++ b/templates/base_profile.html
@@ -39,7 +39,7 @@
                  </ul>
                 {% endwith %}
                 <div class="col col-xl-3 text-end">
-                    <button type="button" class="btn btn-success me-3">Пополнение</button>
+                    <button type="button" class="openReplenishmentModal btn btn-success me-3">Пополнение</button>
                     <a class="logout d-none d-xl-inline" href="{% url 'customer_logout' %}">
                         <i class="icon icon-logout"></i>
                     </a>
@@ -65,6 +65,61 @@
         </div>
     </div>
     {% block profile_content %}{% endblock %}
+
+    <div id="replenishmentModal" class="mmodal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <i class="icon icon-close close closeReplenishmentModal"></i>
+    </div>
+    <form id="replenishmentForm">
+        <div id="selectedBlock">
+            <p class="title">Пополнить Счет</p>
+            <div class="mb-3">
+                <label for="duration" class="form-label">Метод</label>
+                <select class="form-select" name="type" id="type" aria-label="Метод">
+                  <option value="" selected>Выберете метод пополнения</option>
+                  <option value="bank_cards">Банковская карта</option>
+                  <option value="crypto">Криптовалютный кошелек</option>
+                </select>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="button" class="btn btn-outline-secondary closeReplenishmentModal">Отменить</button>
+                </div>
+                <div class="col">
+                    <button type="button" class="btn btn-success" disabled id="typeSend">Подтвердить</button>
+                </div>
+            </div>
+        </div>
+        <div id="bankCardsBlock">
+            <p class="title">Реквизиты Получателя</p>
+            <div class="replenishment-wrapp">
+                    <table class="replenishment-table table align-middle">
+                      <tbody>
+                        <tr>
+                          <td class="text-start no-border">Получатель:</td>
+                          <td class="text-end no-border" id="bankCardsBlockName">...</td>
+                        </tr>
+                        <tr>
+                          <td class="text-start no-border">Банк Получателя:</td>
+                          <td class="text-end no-border" id="bankCardsBlockBankName">...</td>
+                        </tr>
+                        <tr>
+                          <td class="text-start no-border">Номер Карты:</td>
+                          <td class="text-end no-border" id="bankCardsBlockCardNumber">...</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+            <div class="row">
+                <div class="col mt-3">
+                    <button type="button" class="btn btn-success closeReplenishmentModal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
 
 {% block custom_js %}
