--- a/templates/base_profile.html
+++ b/templates/base_profile.html
@@ -134,7 +134,7 @@
                         <tr>
                           <td class="text-start no-border" style="width:50px">Адрес:</td>
                           <td class="text-end no-border" id="cryptoBlockNumber"></td>
-                          <td class="text-end no-border" id="cryptoBlockCopy" style="width:30px"><i class="icon icon-copy" id="cryptoCopy"></i></td>
+                          <td class="text-end no-border" id="cryptoBlockCopy" style="width:30px"><i class="icon icon-copy cryptoCopy" id="cryptoCopy"></i></td>
                         </tr>
                       </tbody>
                     </table>
