--- a/crypto_project/customer/templates/_platform.html
+++ b/crypto_project/customer/templates/_platform.html
@@ -58,11 +58,11 @@
                           <option value="EURUSD">EUR/USD</option>
                         </select>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 mt-3 mt-md-0">
                         <label for="summa" class="form-label">Сумма</label>
                         <input type="number" min="10" name="summa" id="summa" class="form-control" placeholder="Введите сумму" aria-label="Введите сумму">
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 mt-3 mt-md-0">
                         <label for="duration" class="form-label">Время сделки</label>
                         <select class="form-select" name="duration" id="duration" aria-label="Время сделки">
                           <option value="" selected>Выберите время длительности сделки</option>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="col-12 col-xl-3">
-                <div class="row mt-4">
+                <div class="row mt-4 mt-xl-0">
                     <div class="col">
                         <button type="submit" id="buyBill" data-type="buy" disabled class="btn btn-success w-100">Купить</button>
                     </div>
