--- a/crypto_project/customer/templates/profile.html
+++ b/crypto_project/customer/templates/profile.html
@@ -13,15 +13,12 @@
         <div class="col-12 col-xl-3 d-none d-xl-block">
             {% include "_profile.html" %}
         </div>
-        <div class="col-12 col-xl-6">
+        <div class="col-12 col-xl-6 mb-4">
             {% include "_transaction.html" %}
         </div>
         <div class="col-12 col-xl-3">
             <div class="row">
-                <div class="col-12 col-md-6 d-block d-xl-none mt-4">
-                    {% include "_profile.html" %}
-                </div>
-                <div class="col-12 col-md-6 col-xl-12 my-4 mt-xl-0">
+                <div class="col-12 col-md-6 col-xl-12 d-none d-xl-block my-4 mt-xl-0">
                   {% include "_contacts.html" %}
                 </div>
             </div>
