--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -23,12 +23,12 @@
     <nav class="navbar">
         <div class="container">
             <!-- Brand -->
-            <div class="col-6 col-lg-2">
+            <div class="col-6 col-lg-3">
                 <a href="{% url 'homepage' %}" class="navbar-brand"></a>
             </div>
 
             <!-- Navbar links -->
-            <div class="d-none d-xxl-flex nav col-lg-7 justify-content-center mb-md-0" id="collapsibleNavbar">
+            <div class="d-none d-xxl-flex nav col-lg-6 justify-content-center mb-md-0" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" data-scroll-nav="1" href="#">О Нас</a>
@@ -45,7 +45,7 @@
                 </ul>
             </div>
 
-            <div class="col-6 col-lg-3 d-none d-xxl-flex align-items-center justify-content-center text-end">
+            <div class="col-6 col-lg-3 d-none d-xxl-flex align-items-center justify-content-end">
                 {% if not request.customer %}
                 <button type="button" class="btn btn-outline-light openLoginModal">Войти</button>
                 <button type="button" class="btn btn-success ms-3 registration openRegistrationModal">Регистрация</button>
@@ -300,12 +300,12 @@
         <p class="title">Войти</p>
         <form id="loginForm">
             <div class="mb-3">
-                <label for="exampleInputEmail11" class="form-label">Email address</label>
-                <input type="email" name="email" class="form-control" id="exampleInputEmail11" aria-describedby="emailHelp">
+                <label for="loginFormEmail" class="form-label">Email</label>
+                <input type="email" name="email" class="form-control" id="loginFormEmail" placeholder="Введите свой email">
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword13" class="form-label">Password</label>
-                <input type="password" name="password" class="form-control" id="exampleInputPassword13">
+                <label for="loginFormPassword" class="form-label">Пароль</label>
+                <input type="password" name="password" id="loginFormPassword" class="form-control" placeholder="Введите свой пароль">
             </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-success" id="loginSend">Войти</button>
