--- a/static/site/css/root.css
+++ b/static/site/css/root.css
@@ -107,6 +107,10 @@ label {
     height: 48px;
 }
 
+textarea.form-control {
+    height: inherit;
+}
+
 .form-select:focus,
 .form-control:focus {
     border: 1px solid var(--color-3);
