--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -139,82 +139,46 @@
     </section>
     <!-- ===== About Section End ===== -->
 
-    <section class="mission" id="mission" data-scroll-index="2">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-xxl-5 text-center">
-                    <div class="mission-our">
-                        <h2>Наша Миссия - <span>ВАШ РЕЗУЛЬТАТ</span></h2>
-                        <p>Сделать торговлю честной, умной и доступной.</p>
-                        <button type="button" class="btn btn-success">Открыть Счет</button>
-                    </div>
-                </div>
-                <div class="col-12 col-xxl-7 d-flex flex-wrap mission-item-wrapp-all text-center">
-                    <div class="mission-item-wrapp">
-                        <div class="mission-item">
-                            <i class="icon icon-simplicity"></i>
-                            <h3>Простота</h3>
-                            <p>Мы упрощаем торговлю, не упрощая рынок.</p>
-                        </div>
-                    </div>
-                    <div class="mission-item-wrapp">
-                        <div class="mission-item">
-                            <i class="icon icon-lock"></i>
-                            <h3>Надёжность</h3>
-                            <p>Ты должен быть уверен в платформе — и мы это понимаем.</p>
-                        </div>
-                    </div>
-                    <div class="mission-item-wrapp">
-                        <div class="mission-item">
-                            <i class="icon icon-cap"></i>
-                            <h3>Образование</h3>
-                            <p>Делимся знаниями, которые работают в реальных условиях.</p>
-                        </div>
-                    </div>
-                    <div class="mission-item-wrapp">
-                        <div class="mission-item">
-                            <i class="icon icon-community"></i>
-                            <h3>Сообщество</h3>
-                            <p>Ты не один. Мы растём вместе с каждым участником.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- ===== Mission Section Start ===== -->
     <section class="mission" id="mission" data-scroll-index="2">
         <div class="container">
-            <div class="row d-flex justify-content-between">
-                <div class="mission-our col-12 py-5 col-xxl-5 d-flex flex-column">
-                    <div>
+            <div class="row">
+                <div class="col-12 col-xxl-5">
+                    <div class="mission-our py-5 d-flex flex-column align-items-start">
                         <h2>Наша Миссия - <span>ВАШ РЕЗУЛЬТАТ</span></h2>
                         <p>Сделать торговлю честной, умной и доступной.</p>
                         <button type="button" class="btn btn-success">Открыть Счет</button>
                     </div>
                 </div>
-                <div class="col-12 col-xxl-6 pt-md-5 mw-100">
-                    <div class="row">
-                        <div class="col-12 col-md-6 mission-item">
-                            <i class="icon icon-simplicity"></i>
-                            <h3>Простота</h3>
-                            <p>Мы упрощаем торговлю, не упрощая рынок.</p>
+                <div class="col-12 col-xxl-7 pt-5 pt-xxl-0">
+                    <div class="d-flex flex-wrap mission-item-wrapp-all text-center">
+                        <div class="mission-item-wrapp">
+                            <div class="mission-item w-100">
+                                <i class="icon icon-simplicity"></i>
+                                <h3>Простота</h3>
+                                <p>Мы упрощаем торговлю, не упрощая рынок.</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-6 mission-item">
-                            <i class="icon icon-lock"></i>
-                            <h3>Надёжность</h3>
-                            <p>Ты должен быть уверен в платформе — и мы это понимаем.</p>
+                        <div class="mission-item-wrapp">
+                            <div class="mission-item w-100">
+                                <i class="icon icon-lock"></i>
+                                <h3>Надёжность</h3>
+                                <p>Ты должен быть уверен в платформе — и мы это понимаем.</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-6 mission-item">
-                            <i class="icon icon-cap"></i>
-                            <h3>Образование</h3>
-                            <p>Делимся знаниями, которые работают в реальных условиях.</p>
+                        <div class="mission-item-wrapp">
+                            <div class="mission-item w-100">
+                                <i class="icon icon-cap"></i>
+                                <h3>Образование</h3>
+                                <p>Делимся знаниями, которые работают в реальных условиях.</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-6 mission-item">
-                            <i class="icon icon-community"></i>
-                            <h3>Сообщество</h3>
-                            <p>Ты не один. Мы растём вместе с каждым участником.</p>
+                        <div class="mission-item-wrapp">
+                            <div class="mission-item w-100">
+                                <i class="icon icon-community"></i>
+                                <h3>Сообщество</h3>
+                                <p>Ты не один. Мы растём вместе с каждым участником.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
