--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -94,7 +94,7 @@
             <div class="row align-items-center">
                 <div class="col-md-9">
                     <div class="home-text">
-                        <h1>Торгуйте грамотно, Инвестируйте уверенно!</h1>
+                        <h1>Ваш партнёр в мире инвестиций.</h1>
                         <p>Ежедневные идеи, аналитика и сопровождение — в одном месте.</p>
                         <button type="button" class="btn btn-success registration openRegistrationModal">Регистрация</button>
                     </div>
@@ -120,7 +120,7 @@
                     <div class="about-info">
                         <div class="row h-100 align-items-center justify-content-md-center">
                             <div class="about-info-item col-12 col-xxl-3">
-                                <h2>8</h2>
+                                <h2>12</h2>
                                 <span>лет опыта</span>
                             </div>
                             <div class="about-info-item col-12 col-xxl-3">
@@ -128,7 +128,7 @@
                                 <span>довольных клиентов</span>
                             </div>
                             <div class="about-info-item col-12 col-xxl-3">
-                                <h2>1.3M$</h2>
+                                <h2>12,8M$</h2>
                                 <span>заработали наши клиенти за 2024 год</span>
                             </div>
                         </div>
@@ -266,7 +266,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Компания регулируется Управлением по финансовым услугам Сейшельских Островов, номер лицензии SC018.</p>
+                    <p>Регистрационный номер компании CRD: 23551</p>
                 </div>
             </div>
         </div>
