--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -331,10 +331,13 @@
                 <label for="loginFormPassword" class="form-label">Пароль</label>
                 <input type="password" name="password" id="loginFormPassword" class="form-control" placeholder="Введите свой пароль">
             </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Запомнить меня</label>
-              </div>
+            <div class="d-flex w-100  justify-content-between">
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Запомнить меня</label>
+                </div>
+                <a href="#" class="big">Забыли пароль?</a>
+            </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-success" id="loginSend">Войти</button>
             </div>
