--- a/static/site/css/root.css
+++ b/static/site/css/root.css
@@ -87,6 +87,16 @@ a:hover {
     color: var(--color-4);
 }
 
+a.big {
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+a.big:hover {
+    text-decoration: underline;
+}
 
 label {
     font-size: 12px;
@@ -101,10 +111,18 @@ label {
 .form-select,
 .form-control {
     border-radius: 12px;
-    color: var(--color-1);
+    color: var(--main-color);
     font-size: 14px;
+    line-height: 24px;
     border: 1px solid var(--color-border);
     height: 48px;
+}
+
+.form-select::placeholder,
+.form-control::placeholder {
+    font-size: 14px;
+    line-height: 24px;
+    color: var(--color-1);
 }
 
 textarea.form-control {
@@ -116,4 +134,57 @@ textarea.form-control {
     border: 1px solid var(--color-3);
     color: var(--main-color);
     box-shadow: none;
+}
+
+.form-check-input {
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    border: 1px solid var(--color-9);
+    border-radius: 2px;
+    background-color: var(--bg-white);
+    cursor: pointer;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    margin-inline-end: 8px;
+    margin-top: 0;
+}
+
+.form-check-input:checked {
+    background-color: var(--color-3);
+    border-color: var(--color-3);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+}
+
+/* Эффект нажатия */
+.form-check-input:active {
+    filter: brightness(90%);
+}
+
+/* Смена цвета границы при наведении */
+.form-check-input:hover:not(:disabled) {
+    border-color: var(--color-4);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+}
+
+/* Стили для чекбокса при фокусе */
+.form-check-input:focus {
+    border-color: var(--color-4);
+    outline: none;
+    box-shadow: none;
+}
+
+/* Отключенный чекбокс */
+.form-check-input:disabled {
+    filter: none;
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.form-check-input:disabled ~ .form-check-label {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.form-check-label {
+    line-height: 24px;
 }
