--- a/static/site/css/root.css
+++ b/static/site/css/root.css
@@ -145,13 +145,17 @@ textarea.form-control {
     background-color: var(--bg-white);
     cursor: pointer;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    margin-inline-end: 8px;
     margin-top: 0;
 }
 
 .form-check-input:checked {
     background-color: var(--color-3);
     border-color: var(--color-3);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+}
+.form-check-input:checked:hover {
+    background-color: var(--color-4);
+    border-color: var(--color-4);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
 }
 
@@ -186,5 +190,6 @@ textarea.form-control {
 }
 
 .form-check-label {
+    padding-inline-start: 8px;
     line-height: 24px;
 }
