--- a/crypto_project/customer/templates/_profile.html
+++ b/crypto_project/customer/templates/_profile.html
@@ -1,3 +1,5 @@
+{% load currency_filters %}
+
 <div class="card profile-info d-flex flex-row">
     <div class="profile-info-wrapp">
         <span>{{ request.customer.user.name }}</span>
@@ -9,7 +11,7 @@
             </tr>
             <tr>
               <td class="text-start">Баланс:</td>
-              <td class="text-end balance">{{ request.customer.balance }}</td>
+                <td class="text-end"><span class="balance">{{ request.customer.balance }}</span><span class="currency">$</span></td>
             </tr>
             <tr>
               <td class="text-start no-border">Телефон:</td>
